Edited settings and ServerModule1

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -57,4 +57,18 @@ db_schema:
       admin_ui: {width: 200, order: 4}
       type: string
     title: book_slot
+  datas:
+    client: none
+    server: full
+    columns:
+    - name: id
+      admin_ui: {width: 200, order: 0}
+      type: string
+    - name: name
+      admin_ui: {width: 200, order: 1}
+      type: string
+    - name: data
+      admin_ui: {width: 200, order: 2}
+      type: media
+    title: datas
 uplink_visible: true
