--- a/anvil.yaml
+++ b/anvil.yaml
@@ -61,14 +61,14 @@ db_schema:
     client: none
     server: full
     columns:
+    - name: id
+      admin_ui: {width: 200, order: 0}
+      type: number
     - name: name
       admin_ui: {width: 200, order: 1}
       type: string
     - name: data
       admin_ui: {width: 200, order: 2}
       type: media
-    - name: id
-      admin_ui: {order: -1, width: 200}
-      type: number
     title: datas
 uplink_visible: true
